// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vite-plugin-shopify-settings-schema > can output a config with a single module 1`] = `
{
  "name": "vite-plugin-shopify-settings-schema",
  "tests": [
    "with-single-module",
  ],
}
`;

exports[`vite-plugin-shopify-settings-schema > can output a config with modules 1`] = `
{
  "name": "vite-plugin-shopify-settings-schema",
  "tests": [
    "with-modules",
  ],
}
`;

exports[`vite-plugin-shopify-settings-schema > can output a config with other filetypes 1`] = `
{
  "name": "vite-plugin-shopify-settings-schema",
  "tests": [
    "with-other-filetypes",
  ],
}
`;

exports[`vite-plugin-shopify-settings-schema > can output a config with src and dist dirs 1`] = `
{
  "name": "vite-plugin-shopify-settings-schema",
  "tests": [
    "with-src-dist-dirs",
  ],
}
`;
